# room_description

./: CMakeLists.txt  README.md  package.xml
doc/: Doxyfile.extra.in
launch/: room.launch  room.launch~
meshes/: L1.stl  L2.stl  L3.stl  L4.stl  L5.stl  LForearm.stl  LHand.stl  LHumerus.stl  LShank.stl  LThigh.stl  Pelvis.stl  RForearm.stl  RHand.stl  RHumerus.stl  RShank.stl  RThigh.stl  Sacrum.stl  Skull.stl  beer_bottle.dae  beer_sized.dae  beer_sized2.dae  bureauAngulaire.dae  bureauAngulaire_sized.dae  bureauAngulaire_sized2.dae  bureauAngulaire_sized3.dae  bureau_angulaire.dae  carpet.dae  commode.dae  commode_sized.dae  commode_sized2.dae  desklamp_sized.dae  desklamp_sized1.dae  etagere_bois.dae  etagere_bois2.dae  etagere_bois_sized.dae  etagere_bois_sized2.dae  grosse_etagere.dae  lampe_a_pied.dae  lampe_a_pied_sized.dae  lampe_a_pied_sized2.dae  (+14 more)
scripts/: autoRun.sh  autoRun_room.py  room.py  room_hand.py  squel.py
src/hpp/corbaserver/squel_robot/: robot.py
srdf/: squel.srdf
urdf/: room.urdf  room.urdf~  room_only_meshes.urdf  squel.urdf  squel_antoine.urdf  squel_test.urdf  walls.urdf  walls.urdf~
